# OpenCAS_runtime

./: .gitignore  AGENTS.md  CLAUDE.md  OPENCAS_PRODUCT_SPEC.md  README.md  TaskList.md  dedent.py  pyproject.toml  pytest.ini  requirements.txt  serve_docs.sh
docs/: claude-codex-handoff-2026-04-08.md  documentation-map.md  first-regular-use-deployment-checklist.md  getting-started.html  handoff-2026-04-15-commitment-consolidation.md  openbulma-v4-comparison-tables.md  openbulma-v4-full-comparison.md  opencas-architecture-and-comparison.md  opencas-architecture-audit.md  opencas-cleanup-program-2026-04-15.md  opencas-comprehensive-audit.md  opencas-continuation-program-2026-04-15.md  opencas-deep-system-audit-2026-04-09.md  opencas-production-program-plan-2026-04-08.md  opencas-production-readiness-audit-2026-04-08.md  production-readiness-status-2026-04-09.md  source_map.md
opencas/: __init__.py  __main__.py  initiative_contact.py  model_routing.py  phone_config.py  phone_integration.py  phone_integration_service.py  phone_lane_policy.py  phone_session_state.py  phone_streaming.py  provenance_adapter.py  provenance_events_adapter.py  sqlite_compat.py  telegram_commands.py  telegram_config.py  telegram_integration.py
scripts/: async_http_client.py  bst_implementation.py  extract_bulma_package.py  generate_progress_reports.sh  import_dashboard.py  repair_workspace_references.py  run_behavioral_evals.py  run_bulma_import.py  run_live_debug_validation.py  run_live_system_test.py  run_qualification_cycle.py  run_scenario2_repo_triage.py  run_scenario3_operator_recovery.py  (+16 more)
(+629 files in other folders)
