[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".venv",
    "venv",
    "workspace",
    "archive",
    ".tox",
    ".ruff_cache",
    ".mypy_cache",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
